Finish the classic Tetris

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,36 +3,64 @@
 @mixin basic-box-shadow($color) {
   box-shadow: 3px 3px 5px 5px $color, 1px 0px 1px $color;
 }
-
-$main-color: white;
-$accent-color: darken($main-color, 10%);
-$background-color: lighten($main-color, 40%);
+;
 
 // LAYOUT
 
 body {
-  background-color: $background-color;
-  color: $main-color;
-  height: 97vh;
-  width: 100vw;
+  display: flex;
 }
 
-.center {
+.status-bar {
+  width: 168px;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  margin: 16px;
+  border-radius: 8px;
+  border: 3px solid #1073C4;
+}
+
+.title {
+  margin:0 auto;
+}
+
+.title > h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;;
+  font-weight: 700;
+}
+
+.next-canvas-container {
+  width: 132px;
+  height: 132px;
+  border-radius: 8px;
+  border: 3px solid #222222;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-// COMPONENTS
-.card {
-  background: white;
-  height: 50vh;
-  width: 50vw;
-  border-radius: 15px;
-  @include basic-box-shadow($accent-color);
+.next-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container {
+  margin: 0 auto;
+  margin-top: 16px;
+}
+
+.holder {
+  text-align: center;
 }
 
 // TYPOGRAPHY
 h2 {
-  font-size: 3rem;
+  font-size: 1.7rem;
+  font-weight: 200;
+  margin: 0 0 16px 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
