--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,14 @@
 
 body {
   display: flex;
+  justify-content: center;
+  background-color: #111111;
+}
+
+#main {
+  display: flex;
+  margin: 0 auto;
+  color: white;
 }
 
 .status-bar {
@@ -35,7 +43,7 @@ body {
   width: 132px;
   height: 132px;
   border-radius: 8px;
-  border: 3px solid #222222;
+  border: 3px solid #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -60,6 +68,13 @@ body {
 // TYPOGRAPHY
 h2 {
   font-size: 1.7rem;
+  font-weight: 200;
+  margin: 0 0 16px 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+p {
+  font-size: 1rem;
   font-weight: 200;
   margin: 0 0 16px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
