--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,35 @@
-// MIXINS && VARIABLES
-
-@mixin basic-box-shadow($color) {
-  box-shadow: 3px 3px 5px 5px $color, 1px 0px 1px $color;
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.0);
+  z-index: 10;
+  display: none;
 }
-;
 
-// LAYOUT
+.modal.show {
+  display: block
+}
+
+.modal > div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 200px;
+  height: 200px;
+  background-color: black;
+  color: white;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  border: 3px solid #1073C4;
+}
 
 body {
   display: flex;
@@ -43,7 +67,7 @@ body {
   width: 132px;
   height: 132px;
   border-radius: 8px;
-  border: 3px solid #ffffff;
+  border: 3px solid #1073C4;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -74,8 +98,22 @@ h2 {
 }
 
 p {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 200;
   margin: 0 0 16px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+button {
+  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: 3px solid #1073C4;
+  color: white;
+  background-color: black;
+}
+
+button:hover {
+  background-color: #333333;
 }
