--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -44,12 +44,13 @@ body {
 }
 
 .status-bar {
-  width: 168px;
-  height: 600px;
+  width: 200px;
+  height: 680px;
   display: flex;
   flex-direction: column;
   padding: 24px;
   margin: 16px;
+  margin-top: 40px;
   border-radius: 8px;
   border: 3px solid #1073C4;
 }
@@ -98,10 +99,16 @@ h2 {
 }
 
 p {
+  text-align: center;
   font-size: 0.8rem;
   font-weight: 200;
   margin: 0 0 16px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+p > span {
+  font-weight: bolder;
+  font-size: 0.85rem;
 }
 
 button {
