--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -79,11 +79,12 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-bottom: 16px;
 }
 
 .container {
   margin: 0 auto;
-  margin-top: 16px;
+  margin-bottom: 8px;
 }
 
 .holder {
@@ -94,7 +95,7 @@ body {
 h2 {
   font-size: 1.7rem;
   font-weight: 200;
-  margin: 0 0 16px 0;
+  margin: 0 0 8px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -102,7 +103,7 @@ p {
   text-align: center;
   font-size: 0.8rem;
   font-weight: 200;
-  margin: 0 0 16px 0;
+  margin: 0 0 8px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -119,6 +120,7 @@ button {
   border: 3px solid #1073C4;
   color: white;
   background-color: black;
+  margin-bottom: 8px;
 }
 
 button:hover {
