--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,6 +62,7 @@ body {
 .title > h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;;
   font-weight: 700;
+  margin: 0;
 }
 
 .next-canvas-container {
@@ -124,5 +125,10 @@ button {
 }
 
 button:hover {
+  background-color: #333333;
+}
+
+button:disabled {
+  color: gray;
   background-color: #333333;
 }
