--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -62,6 +62,11 @@ body {
 .title > h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;;
   font-weight: 700;
+  margin-bottom: 4px;
+}
+
+.title > p {
+  margin-bottom: 24px;
 }
 
 .next-canvas-container {
