Update dist files

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -135,7 +135,8 @@ button:hover {
 button:disabled {
   color: gray;
   background-color: #333333;
-  
+}
+
 .links {
   display: flex;
   width: 36px;
