--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,8 +48,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 8px 24px;
-  margin: 16px;
-  margin-top: 40px;
+  margin: 40px 16px;
   border-radius: 8px;
   border: 3px solid #1073C4;
 }
