--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -78,6 +78,14 @@ body {
   justify-content: center;
 }
 
+.right {
+  margin-bottom: 24px;
+}
+
+.right:first-child {
+  margin-top: 24px;
+}
+
 .next-container {
   display: flex;
   align-items: center;
@@ -100,6 +108,7 @@ h2 {
   font-size: 1.7rem;
   font-weight: 200;
   margin: 0 0 8px 0;
+  color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
