--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -151,6 +151,7 @@ button:disabled {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  z-index: 20;
 }
 
 .links > a {
